Backporting fixes from trunk
git-svn-id: https://svn.apache.org/repos/asf/roller/branches/roller_5.0@1515384 13f79535-47bb-0310-9956-ffa450edef68